feat(faasnap): add REAP support
